# BRTRI_Project

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
blender_plugin/: __init__.py
blender_plugin/communication/: bridge_client.py  status_monitor.py
blender_plugin/operators/: error_handler.py  receiver.py  visualizer.py
blender_plugin/utils/: debug.py  optimizers.py  performance_monitor.py
bridge/: Cargo.toml  build.rs
bridge/src/: config.rs  error.rs  lib.rs  main.rs
bridge/src/core/: buffer.rs  monitor.rs  router.rs
bridge/src/processing/: filter.rs  optimizer.rs  point_cloud.rs
bridge/src/protocols/: blender.rs  ios.rs
bridge/src/utils/: mod.rs
ios_app/Sources/Core/LiDAR/: Scanner.swift
ios_app/Sources/Core/Network/: Connector.swift  Stream.swift
