[package]
name = "brtri_bridge"
version = "0.1.0"
edition = "2021"
authors = ["BRTRI Team"]
description = "Bridge component for Blender Real-Time LiDAR Integration"
license = "MIT"

[dependencies]
tokio = { version = "1.28", features = ["full", "rt-multi-thread", "parking_lot"] }
zeromq = { version = "0.3", features = ["tokio", "async-std"] }
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pcl = { version = "0.2", features = ["parallel"] }
open3d-rs = { version = "0.1", optional = true }
crossbeam-channel = "0.5"
parking_lot = "0.12"
dashmap = "5.4"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
proptest = "1.2"

[features]
default = ["parallel", "simd"]
parallel = []
simd = []
open3d = ["open3d-rs"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
debug = false
strip = true
incremental = false

[profile.dev]
opt-level = 1
debug = true

[build]
rustflags = ["-C", "target-cpu=native"]

[[bench]]
name = "processing"
harness = false